# static-reflections

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  lib_reflect_parser.cpp  lib_reflect_parser.h
tests/: CMakeLists.txt  reflect_class.t.m.cc
